<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Login Strings -->
    <string name="app_name">AskLah</string>
    <string name="nus_id">NUS ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo_here">Logo here</string>

    <!-- Create Username Strings -->
    <string name="username">Username</string>
    <string name="create">Create</string>
    <string name="create_username">Create your username!</string>

    <!-- Achievements Strings -->
    <string name="achievement">Achievements</string>

    <!-- Settings Strings -->
    <string name="push_notif">Push Notifications</string>
    <string name="settings">Settings</string>

    <!-- Announcements Strings -->
    <string name="announcements">Announcements</string>

    <!-- List Item Announcement Strings -->
    <string name="attain_achievement"><xliff:g example="chaomugger" id="username">%s</xliff:g> just unlocked the achievement: <xliff:g example="Question Ninja" id="achievement_name">%s</xliff:g>!</string>

    <!-- fragment_profile Strings -->
    <string name="change_username">Change username</string>
    <string name="your_achievements">Your achievements</string>

    <!-- Modules List Strings -->
    <string name="modules_list">Modules List</string>

    <!-- Recycle Item thread Strings -->
    <string name="comment_op">Posted by <xliff:g example="chaomugger" id="username">%s</xliff:g> on <xliff:g example="26/3/13" id="date">%s</xliff:g> <xliff:g example="1250h" id="time">%s</xliff:g></string>

    <!-- Subscribed Questions Strings -->
    <string name="subscribed_questions">Subscribed Questions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_camera_fullscreen">CameraFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="search_hint">Search Module Tag Name</string>

    <string name="liked_button">❤</string>

    <string name="unliked_button">\u2661</string>

    <string name="pin_button">✓</string>
</resources>
